--- a/grader/omegaup.conf.sample
+++ b/grader/omegaup.conf.sample
@@ -1,45 +1,45 @@
-# Logging
-logging.file=/var/log/omegaup/service.log
-logging.level=info
-
-# Database settings
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/omegaup?autoReconnect=true
-db.user=
-db.password=
-
-# Compiler settings
-c.compiler.path=/usr/bin/gcc
-cpp.compiler.path=/usr/bin/g++
-java.compiler.path=/usr/bin/javac
-java.runtime.path=/usr/bin/java
-
-# Paths
-compile.root=/var/lib/omegaup/compile
-grader.root=/var/lib/omegaup/grade
-input.root=/var/lib/omegaup/input
-problems.root=/var/lib/omegaup/problems
-submissions.root=/var/lib/omegaup/submissions
-runner.sandbox.path=/opt/omegaup/sandbox
-runner.minijail.path=/var/lib/minijail
-runner.sandbox=minijail
-
-# SSL
-ssl.cacert.alias=omegaUp Certificate Authority
-ssl.keystore.password=omegaup
-ssl.keystore=/opt/omegaup/bin/omegaup.jks
-ssl.password=omegaup
-ssl.truststore.password=omegaup
-ssl.truststore=/opt/omegaup/bin/omegaup.jks
-
-# Grader
-grader.deregister.url=https://localhost:21680/endpoint/deregister/
-grader.embedded_runner.enable=true
-grader.memory_limit=2048
-grader.port=21680
-grader.register.url=https://localhost:21680/endpoint/register/
-grader.standalone=false
-
-# Runner
-runner.port=0
-runner.preserve=false
+{
+	"broadcaster" : {
+		"enable_all_events": true
+	}
+	"logging": {
+		"file": "/var/log/omegaup/service.log",
+		"perf_file": "/var/log/omegaup/perf.log",
+		"level": "debug"
+	},
+	"omegaup": {
+		"salt": "omegaup",
+		"role_url": "https://localhost/api/contest/role/"
+	},
+	"db": {
+		"driver": "com.mysql.jdbc.Driver",
+		"url": "jdbc:mysql://localhost/omegaup?autoReconnect=true",
+		"user": "root",
+		"password": "omegaup"
+	},
+	"common": {
+		"roots": {
+			"compile": "/opt/omegaup/omegaup/compile",
+			"grade": "/var/lib/omegaup/grade",
+			"input": "/opt/omegaup/omegaup/input",
+			"problems": "/var/lib/omegaup/problems",
+			"submissions": "/var/lib/omegaup/submissions"
+		}
+	},
+	"ssl": {
+		"keystore_path": "omegaup.jks",
+		"keystore_password": "omegaup",
+		"truststore_path": "omegaup.jks",
+		"truststore_password": "omegaup",
+		"password": "omegaup"
+	},
+	"grader": {
+		"port": 21680,
+		"memory_limit": 2048,		
+		"scoreboard_refresh": {
+			"url": "https://localhost/api/scoreboard/refresh/",
+			"token": "secrettoken"
+		},
+		"embedded_runner_enabled": true
+	}
+}
